# LogAnalyzer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __main__.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/api/: index.md
examples/: basic_usage.py  custom_parser.py
src/log_analyzer/: cli.py
src/log_analyzer/analyzers/: web_analyzer.py
src/log_analyzer/core/: analyzer.py  metrics.py  reader.py
src/log_analyzer/core/analyzers/: base.py  config.py  log_analyzer.py  results.py  web_analyzer.py
src/log_analyzer/parsers/: apache.py  base.py  custom.py  firewall_base.py  json_parser.py  nginx.py  syslog.py
src/log_analyzer/parsers/firewall/: ciscoasa.py  firewall_parser.py  iptables.py  pfsense.py  windows.py
src/log_analyzer/processors/: pipeline.py  transformers.py
src/log_analyzer/utils/: config.py  constants.py  file_utils.py  helpers.py  logging_utils.py  string_utils.py  transformers.py
src/log_analyzer/web/: app.py  enhanced_firewall_metrics.py  field_detector.py  log_processor.py
src/log_analyzer/web/static/: index.html
src/log_analyzer/web/static/components/: App.js  ErrorAnalysis.js  FirewallDashboard.js  HttpAnalysis.js  LogFilters.js  MetricsDashboard.js  MetricsOverview.js  PerformanceAnalysis.js  (+2 more)
tests/: test_integration.py  test_performance.py
tests/test_core/: test_analyzer.py
tests/test_parsers/: test_apache.py  test_base.py  test_nginx.py
tests/test_processors/: test_pipeline.py  test_transformers.py
tests/test_utils/: test_config.py  test_file_utils.py  test_string_utils.py
(+4 files in other folders)
