[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-analyzer"
version = "0.1.0"
description = "A robust and scalable log analyzer for processing large log files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Sneh Patel", email = "supatel5678.90@gmail.com" }
]
dependencies = [
    "psutil>=5.9.0",
    "pytz>=2023.3",
    "pytest-asyncio>=0.21.0",
    "click>=8.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "rich>=10.0.0",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.0",
    "aiofiles>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=log_analyzer"